# 2d_normal_lidar_odom

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/normal_lidar_odometry/: build.check.001.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.034.log.stderr  build.make.036.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.056.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.065.log.stderr  (+13 more)
src/: normal_lidar_odom
src/exercise/: CMakeLists.txt  README.md  config.rviz
src/exercise/include/: constants.h  normal_tracker.h  ros_bridge.h  tracker.h
src/exercise/include/icp/: eigen_covariance.h  eigen_icp_2d.h  eigen_kdtree.h
src/exercise/include/nicp/: eigen_nicp_2d.h  normal_estimator.h
src/exercise/src/: normal_tracker.cpp  ros_bridge.cpp  tracker.cpp
src/exercise/src/nicp/: eigen_nicp_2d.cpp  normal_estimator.cpp
(+21 files in other folders)
